<resources>
    <string name="app_name">BBT (Be Better Today - Hospital Finder)</string>
    <string name="title_activity_maps">Hospital Finder</string>
    <string name="access_token" translatable="false">YOUR_MAPBOX_ACCESS_TOKEN</string>
    <string name="user_location_permission_not_granted">You did not grant location permissions.</string>
    <string name="Welcome">Welcome!</string>
    <string name="navigate">Navigate</string>
    <string name="aboutMe">About Me</string>
    <string name="name">Name</string>
    <string name="btn">button</string>
    <string name="red">red</string>
    <string name="blue">blue</string>
    <string name="settings">settings</string>
    <string name="GoogleEarth">googleEarth</string>
    <string name="maps_api_key">AIzaSyDTNLo21JuSdO-L3z9r-xf8v-CYY7Gt-kY</string>
    <string name="action_search">Action search</string>
    <string name="my_text_button">My Text Button</string>
    <string name="my_button_text">My button text</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="title_activity_home">Home Activity</string>
    <string name="decrypt">Decrypt</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="add_friend">Add friend</string>
    <string name="sign_out_button">Sign-out</string>
    <string name="title_activity_chat">Chat Activity</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="begin_login">Start</string>
    <string name="title_activity_mainj">Main Activity Java</string>
    <string name="todo">TODO</string>
    <string name="title_activity_contacts">Contacts Activity</string>
    <string name="begin_button">Begin</string>
    <string name="hello">Hello</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">Send</string>
    <string name="sign_out">Sign Out</string>
    <string name="message">message…</string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="profile_picture">PROFILE PICTURE</string>
    <string name="abdullah">Abdullah</string>
    <string name="having_recently_been_awarded_a_bachelors_of">Having Recently been awarded a bachelors of</string>
    <string name="science_in_software_engineering_i_look_forward_to">science in software engineering I look forward to</string>
    <string name="helping_people_where_i_can">helping people where I can!</string>
    <string name="email">Email</string>
    <string name="add_contact">Add contact</string>
    <string name="phone">Phone</string>
    <string name="reset_output_text">reset output text</string>
    <string name="textview">TextView</string>
    <string name="click_button">Click Button</string>
    <string name="hospital_button">Show hospitals</string>
    <string name="encrypt">Chat</string>
    <string name="chat">Chat</string>
    <string name="login_now">Login Now</string>
    <string name="big_star">Big star</string>
    <string name="server_client_id">870272768791-hiohc3satnmh6m8ej81kvpqc9l45vs7g.apps.googleusercontent.com</string>
    <string name="title_activity_rsa">RSA activity</string>
    <string name="hospitallocator">HospitalLocator</string>
    <string name="download">download</string>
    <string name="begin">begin</string>
    <string name="title_activity_async">Async Activity</string>
    <string name="make_call">Call</string>
    <string name="login">Login</string>
    <string name="title_activity_recycler">Recycler Activity</string>
    <string name="image_call_hint">make call</string>
    <string name="calling">calling</string>
    <string name="title_activity_phone">Phone Activity</string>
    <string-array name="hospitals">
        <item>children_hospital</item>
        <item>public_hospital</item>
        <item>private_hospital</item>
        <item>government_hospital</item>
        <item>university_hospital</item>
    </string-array>
    <!--<item name="hybrid_map" type="id">Hybrid Map</item>-->
</resources>