<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center">

    <Button
        android:id="@+id/buttonSkipLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="skipLogin"
        android:text="@string/begin_login" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        app:buttonSize="wide" >

        <Button
            android:id="@+id/buttonChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openChat"
            android:text="Chat" />

    </com.google.android.gms.common.SignInButton>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="219dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/profile_picture"

        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/BSelectImage"
        android:layout_width="102dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="16dp"
        android:onClick="imageChooser"
        android:text="@string/select_image"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_anchor="@+id/google_sign_in_button"
        app:layout_anchorGravity="end|center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>